<resources>
    <string name="app_name">BicycleAccounter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_template">%d Р</string>
    <string name="not_ready_for_sale">Товар не готов к продаже</string>
    <string name="bicycles_title">Велосипеды</string>
    <string name="customers_title">Клиенты</string>
    <string name="add_title">Добавить</string>
    <string name="statistics_title">Статистика</string>
    <string name="sales_title">Продажи</string>
    <string name="state_header">Состояние</string>
    <string name="wheel_size_header">Размер колес</string>
    <string name="color_header">Цвет</string>
    <string name="price_min_header">Минимальная цена</string>
    <string name="description_header">Описание</string>
    <string name="issues_header">Список проблем</string>
    <string name="sell_bike_button">Продать</string>
    <string name="bicycle_name_hint">Название велосипеда</string>
    <string name="bicycle_type_hint">Тип велосипеда</string>
    <string name="bicycle_state_hint">Состояние велосипеда</string>
    <string name="wheel_diameter_hint">Диаметр колес</string>
    <string name="color_hint">Цвет</string>
    <string name="purchase_price_hint">Цена закупки</string>
    <string name="additional_info_hint">Дополнительная информация</string>
    <string name="new_bicycle_label">Новый велосипед</string>
    <string name="add_bicycle_button_label">Добавить велосипед</string>
    <string name="client_name_test">Пожилая Абоба</string>
    <string name="phone_number_test">+7(964)896–65–32</string>
    <string name="test_state">Тестовое состояние</string>
    <string name="wrong_wheel_size_hint">Размер колес должен быть больше 0 и меньше 50 дюймов</string>
    <string name="wrong_state_name_hint">Введите состояние (например "В продаже")</string>
    <string name="wrong_color_name_hint">Название цвета не должно содержать пробелов, сложные цвета вводятся через дефис (например "Черно-желтый")</string>
    <string name="wrong_type_name_hint">Тип велосипеда не должен содержать цифр</string>
    <string name="wrong_purchase_price_hint">Введите цену</string>
    <string name="bicycle_added_successfully">Велосипед успешно добавлен</string>
    <string name="bicycle_adding_failed">Произошла ошибка, не удалось добавить велосипед</string>
    <string name="month_year_test">май 2022</string>
    <string name="date_test">22</string>
    <string name="bicycle_load_failed_text">Велосипед не найден!</string>
    <string name="home_screen_loading_error">Не удалось загрузить список велосипедов…</string>
    <string name="sell_button">Продать</string>
    <string name="selling_price_hint">Цена продажи</string>
    <string name="client_name_hint">Имя клиента</string>
    <string name="customer_phone_number_hint">Номер телефона клиента</string>
    <string name="sell_bicycle_success">Велосипед успешно продан!</string>
    <string name="sell_bicycle_failure">Имя клиента не совпадает с его номером телефона</string>
    <string name="sell_bicycle_fill_all_fields">Заполните все поля</string>
    <string name="failed_to_load_detailed_info">Произошла ошибка при загрузке детальной информации</string>
    <string name="sales_warranty_template">Срок истечения гарантии %s</string>
    <string name="home_screen_empty_db">У Вас нет ни одного велосипеда для продажи</string>
    <string name="detailed_sale_empty_id">Кажется, такого велосипеда нет</string>
    <string name="company_name">Велодом ИРК</string>
    <string name="customer_title">Клиент:</string>
    <string name="bike_title">Велосипед:</string>
    <string name="additional_info_title">Дополнительная информация</string>
    <string name="sell_price_title">Сумма сделки:</string>
    <string name="purchase_price_title">Цена закупки:</string>
    <string name="cost_title">Сумма издержек:</string>
    <string name="total_cost_pattern">Итого: %d Р</string>
    <string name="add_bicycle_photo_counter_default">Фото добавлено: 0</string>
    <string name="add_bicycle_photo_counter_template">Фото добавлено: %d</string>
    <string name="add_bicycle_add_photo_button">Добавить фото</string>
    <string name="add_bicycle_needs_permission">Для добавления фото необходимы права на доступ к хранилищу</string>
    <string name="statistics_fragment_header">Статистика продаж</string>
    <string name="money_spent_header_text">Потрачено за период (расход)</string>
    <string name="issues_losses_header_text">Расходы на устранение проблем</string>
    <string name="dirty_profit_header_text">Суммарный доход за период (приход)</string>
    <string name="profit_header_text">Доход</string>
    <string name="stats_loading_failed">Не удалось загрузить статистику за указанный период</string>
    <string name="bicycles_count_header_text">Продано велосипедов</string>
    <string name="price_header_text">Рекомендованная цена</string>
    <string name="no_selling_price_set">\???</string>
    <string name="change_state_dialog_tag">Выберите новое состояние</string>
    <string name="cancel">Отмена</string>
    <string name="change_price_dialog_title">Установка цены велосипеда</string>
    <string name="change">Изменить</string>
    <string name="add">Добавить</string>
    <string name="add_issue_price_hint">Сумма издержек (цена исправления)</string>
    <string name="add_issue_description">Описание проблемы</string>
    <string name="update_issue_failed_text">Произошла ошибка при добавлении проблемы</string>
    <string name="update_price_failed_text">Произошла ошибка при обнеовлении цены</string>
    <string name="update_state_failed_text">Произошла ошибка при обновлении состояния</string>
</resources>